test_regress/t/t_param_type_bad.out
%Error: t/t_param_type_bad.v:9:27: Expected data type, not a CONST '?32?sh2'
                                                                   : ... note: In instance 't'
    9 |    localparam type bad2 = 2;
      |                           ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=5.043 for more assistance.